# pdf_render

./: .gitignore  Cargo.toml  README.md  fonts.md  fonts.tar.bz
benches/: render.rs  view.rs
examples/pdf2image/: Cargo.toml  font_AAAAAH+Baskerville
examples/pdf2image/src/: main.rs
examples/pdf_viewer/: Cargo.toml
examples/pdf_viewer/src/: lib.rs  main.rs  pdf.rs  pdf_view.rs
examples/pdf_viewer/src/shader/: blit.wgsl
render/: Cargo.toml
render/benches/: render.rs  view.rs
render/examples/: trace.rs
render/src/: backend.rs  cache.rs  font.rs  fontentry.rs  graphicsstate.rs  image.rs  lib.rs  pathfinder_backend.rs  renderstate.rs  scene.rs  textstate.rs  tracer.rs  vello.rs  vello_backend.rs
src/: cache.rs  renderstate.rs
view/: Cargo.toml  Makefile
view/src/: lib.rs
vview/: Cargo.toml
vview/src/: application.rs  continuous_scroll.rs  lib.rs  main.rs
wasm/: index.html  index.js
