[package]
name = "pdf_render"
version = "0.1.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2021"

[features]
unstable = []
dump = ["pdf/dump"]
jpeg2k = ["pdf/jpeg2k"]

[[bench]]
name = "render"
harness = false

[dependencies.pdf]
default-features=false 
git = "https://github.com/pdf-rs/pdf"

[dependencies]
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
log = "0.4"
font = { git = "https://github.com/pdf-rs/font" }
pdf_encoding = "0.3"
itertools = "*"
image = "0.23"
instant = "*"

[dev-dependencies]
criterion = "0.3"
