[package]
name = "pdf_render"
version = "0.1.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2021"

[features]
unstable = []
glyphmatcher = ["dep:glyphmatcher"]

[[bench]]
name = "render"
harness = false

[dependencies.pdf]
default-features=false 
features = ["cache", "dump"]
git = "https://github.com/pdf-rs/pdf"

[dependencies]
# pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
log = "0.4"
font = { git = "https://github.com/pdf-rs/font", branch = "vello", features=['cff']}
pdf_encoding = "0.4"
itertools = "*"
image = "0.24.2"
instant = "*"
custom_debug_derive = "*"
globalcache = { git = "https://github.com/s3bk/cachelib", features = ["sync"] }
istring = { git = "https://github.com/s3bk/istring" }
once_cell = "*"
serde_json = "*"
glyphmatcher = { git = "https://github.com/s3bk/glyphmatcher", optional = true }
vello_encoding = "*"
vello = { path="../../vello/vello" }

[dev-dependencies]
criterion = "0.3"
env_logger = "*"
