[package]
name = "pdf_view"
version = "0.1.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2018"

[features]
unstable = []

[dependencies.pdf]
git = "https://github.com/pdf-rs/pdf"
default-features=false 

[dependencies.pdf_render]
path = "../render"

[dependencies.pathfinder_view]
git = "https://github.com/s3bk/pathfinder_view"
features = ["icon"]

[dependencies]
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_color = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_resources = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder" }
log = "0.4"
structopt = "0.3"
font = { git = "https://github.com/pdf-rs/font" }
pdf_encoding = "0.1"
itertools = "*"
image = "0.23"

[dev-dependencies]
criterion = "0.3"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.48"
js-sys = "0.3"
web-sys = { version = "*", features = ["HtmlCanvasElement"] }
console_log = "0.2"
console_error_panic_hook = "0.1.6"

[target.'cfg(unix)'.dependencies]
env_logger = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]
