[package]
name = "pdf_view"
version = "0.1.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2018"

[features]
unstable = []
jpeg2k = ["pdf_render/jpeg2k"]

[dependencies.pdf]
git = "https://github.com/pdf-rs/pdf"
default-features=false 
features = ["dump", "jpeg2k", "jbig2"]

[dependencies.pdf_render]
path = "../render"

[dependencies.pathfinder_view]
git = "https://github.com/s3bk/pathfinder_view"
features = ["icon"]

[dependencies]
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
pathfinder_export = { git = "https://github.com/servo/pathfinder" }
log = { version = "0.4" }
structopt = "0.3"
font = { git = "https://github.com/pdf-rs/font" }
pdf_encoding = "0.1"
itertools = "*"
image = "*"

[dev-dependencies]
criterion = "0.3"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.48"
js-sys = "0.3"
web-sys = { version = "*", features = ["HtmlCanvasElement", "WebGl2RenderingContext"] }
console_log = "0.2"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.3", features = ["js"]}

[target.'cfg(unix)'.dependencies]
env_logger = "0.8"
pdf_render = { path = "../render", features = ["jpeg2k" ]}

[lib]
crate-type = ["cdylib", "rlib"]
