[package]
name = "pdf_vview"
version = "0.1.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2021"

[features]
unstable = []

[dependencies.pdf]
git = "https://github.com/pdf-rs/pdf"
default-features=false 
features = ["dump"]

[dependencies.pdf_render]
path = "../render"

[dependencies]
log = { version = "0.4" }
structopt = "0.3"
font = { git = "https://github.com/pdf-rs/font", branch = "vello"}
itertools = "*"
image = "0.24.2"
vello = { version = "0.2.0" }
winit = "0.29.10"
env_logger = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pdf_vview"
path = "src/main.rs"
